fin de la phase
